# callback_executor

./: .gitignore  LICENCE  README.md  __init__.py  publish_to_pypi.sh  publish_to_testpypi.sh  pyproject.toml  setup.cfg  setup.py
src/callback_executor/: __init__.py  executor.py
src/tests/: test_executor.py
