[metadata]
name = callback_executor
version = 0.0.1
author = Wladimir Guerra
author_email = wladimir.guerra.dev@gmail.com
description = A callback queue that execute each callback in a minimum period of time.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wladimirguerra/callback_executor
project_urls =
    Bug Tracker = https://github.com/wladimirguerra/callback_executor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
